# safe-copy

./: README.md  pyproject.toml  safe_copy.py  tox.ini
safe_copy/: __init__.py  check_dir.py  checksum_gen.py  managed_directories.py  managed_directory.py  safe_copy.py  safe_validate.py
tests/safe_copy/managed_directories/: test_managed_file.py
