[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "safe-copy"
version = "1.0.0"
description = "Small util for copying files between directories in a manner where the result is validated"
readme = "README.md"
requires-pythom = ">=3.9"
[project.scripts]
safe-copy = "safe_copy:main"